--- a/repicene-debugger/resources/public/css/style.css
+++ b/repicene-debugger/resources/public/css/style.css
@@ -104,3 +104,18 @@ body {
     color: lime;
     display: flex;
 }
+
+.debugger-button {
+    width: 6em;
+    color: lime;
+    background-color: black;
+    text-align: center;
+    border-radius: 0.2em;
+    cursor: pointer;
+    margin: 0.2em;
+}
+
+.debugger-button:hover {
+    color:black;
+    background-color:lime;
+}
